--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@ html, body {
     scroll-behavior: smooth;
     height: 100%;
     margin: 0;
-    background-color: #F9FAFB;
+    /* background-color: #f0f0f2; */
 
   }
 
