--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,17 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "tailwindcss";
-*{
+
+* {
     font-family: Poppins;
 }
-html, body {
+
+html,
+body {
     scroll-behavior: smooth;
     height: 100%;
     margin: 0;
     /* background-color: #f0f0f2; */
+}
 
-  }
+/* Hide scrollbar for horizontal scroll */
+.scrollbar-hide {
+    -ms-overflow-style: none;
+    /* Internet Explorer 10+ */
+    scrollbar-width: none;
+    /* Firefox */
+}
 
-  /* secondary - e2dbfc
-  text - 2f1c6a
-  primary - 5025d1
-   */
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+    /* Safari and Chrome */
+}
+
+/* secondary - e2dbfc
+text - 2f1c6a
+primary - 5025d1
+ */
